--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@
 
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
-/public/build/
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+/public/build/*
+!/public/build/images/
+!/public/build/images/**
